kubernetes/apps/networking/traefik/externalservices/ceph.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 10.0.0.107
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
    - name: metrics
      port: &metrics 9283
      protocol: TCP
      targetPort: *metrics
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 10.0.0.107
    ports:
      - name: http
        port: 8080
        protocol: TCP
      - name: metrics
        port: 9283
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app ceph
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-localonly@kubernetescrd,networking-authelia@kubernetescrd
    hajimari.io/icon: mdi:server
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &host ceph.deangalvin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: "${PRODUCTION_TLS}"
