kubernetes/apps/networking/traefik/externalservices/zwave.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app zwave
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: 10.0.0.101
  ports:
    - name: http
      port: &port 8091
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app zwave
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-localonly@kubernetescrd,networking-authelia@kubernetescrd
    hajimari.io/icon: mdi:server
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &host zwave.deangalvin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8091
  tls:
    - hosts:
        - *host
      secretName: "${PRODUCTION_TLS}"
